# python-sqs-client

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-ci.txt  setup.cfg
.github/workflows/: cd.yml  ci-dev.yml
examples/: example.py  lazy_mode.py  publish.py  subscribe.py
sqs_client/: client.py  publisher.py  task.py
